# ChangeLog for x11-wm/enlightenment
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.180 2013/01/26 21:59:52 vapier Exp $

  26 Jan 2013; Mike Frysinger <vapier@gentoo.org> enlightenment-1.0.11.ebuild:
  Mark stable for everyone else #453014.

  26 Jan 2013; Agostino Sarubbo <ago@gentoo.org> enlightenment-1.0.11.ebuild:
  Stable for ppc64, wrt bug #453014

  26 Jan 2013; Agostino Sarubbo <ago@gentoo.org> enlightenment-1.0.11.ebuild:
  Stable for ppc, wrt bug #453014

  26 Jan 2013; Markus Meier <maekke@gentoo.org> enlightenment-1.0.11.ebuild:
  arm stable, bug #453014

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org> enlightenment-1.0.11.ebuild:
  Stable for x86, wrt bug #453014

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org> enlightenment-1.0.11.ebuild:
  Stable for amd64, wrt bug #453014

  22 Jan 2013; Jeroen Roovers <jer@gentoo.org> enlightenment-1.0.11.ebuild:
  Stable for HPPA (bug #453014).

  29 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  enlightenment-0.17.0.ebuild:
  Add missing eet dependency

  22 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  enlightenment-0.17.0.ebuild:
  Update dependencies to efl-libs release 1.7.4

*enlightenment-0.17.0 (22 Dec 2012)

  22 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -enlightenment-0.17.0_beta2.ebuild, -enlightenment-0.17.0_beta3.ebuild,
  +enlightenment-0.17.0.ebuild:
  Version bump, drop old

*enlightenment-0.17.0_beta3 (19 Dec 2012)

  19 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +enlightenment-0.17.0_beta3.ebuild:
  Version bump

*enlightenment-0.17.0_beta2 (14 Dec 2012)

  14 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -enlightenment-0.17.0_beta.ebuild, -enlightenment-0.17.0_beta1.ebuild,
  +enlightenment-0.17.0_beta2.ebuild:
  Version bump, drop old

*enlightenment-0.17.0_beta1 (13 Dec 2012)

  13 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>