@@ -11,8 +11,10 @@ DIST e16-1.0.7.tar.gz 2223518 SHA256 d36cf57e4125b173608a6f4cbfa53d91f59f047579f
 DIST e16-1.0.8.tar.gz 2243485 SHA256 794d842ec30a29e0d6a85a3bd40120151c27419d77d2fd5759b49862063be27f SHA512 f8d8687a40defdbec385ab007351501a2bd5d39addc6d096655ee57b0384e59aa374c9d1860fa81f5405751e706015b920712c9607b04182916d9a5b7bfe22e7 WHIRLPOOL a558555b955951c9ccd039898d6e8b2219ae284f839ca921fe89bfebbf1ae9257826187c65ab81564cb074b1cb17cfd75bddfea7e02492796be6d05be62c237c
 DIST e16-1.0.9.tar.gz 2256543 SHA256 d435840a4a429cb22f241d7889e82827061f6ef5ccd9bbc8720af51dee053d27 SHA512 75dc4c784bb70a22b5baa6462024164a10bcea325aa479d2c856f8d214910f36fba865f78017f5c71847991015e7164ecb3959b9ee6d8e531c1b938bd5f61d2a WHIRLPOOL 1c11956dee0905a5465bbc900c3e5fb5ded702b091d3e1bb93738101a82efda82270e5b1fb530e3980077a53fecdb6136bbc4b9c564136bf82ec475fc851cdbc
 DIST enlightenment-0.17.0.tar.bz2 29213523 SHA256 0b1dbeb28b5c114816a7d2a3567b90ffe6eb9f49ab4939cad797ba59f35e525a SHA512 2eea1fdc0d02cb50441ac362bebe3d6300da8f2c30db80e8a9af539f0e6c904d509594075beaa6a50fdd88c0a6c238d5c031f55bfaaef422e1b01887c5e567cb WHIRLPOOL e52803a938c76fb21a74f29354ad95b6574118fbcb79f012ac9f09aad5a887b72bd62a3e55551f208bfb09dcf94c62b49b1c0a79833e1a75c7cfd38765ab1bfd
+DIST enlightenment-0.17.1.tar.bz2 29079040 SHA256 7e4457c5edbc400ecad3aa10ad5bdaed515d9069e7c9718ccea5307f72ea5bfc SHA512 dedf25d2f6da652b8d6dd1256316d8b27965be292912f7f61dce283d5495843a17f1d4bc5c9a95766e4ef14c93ef99743cccc8a947f50e6b88988c061a48beb0 WHIRLPOOL 1c66a6db7a3ad40e9e9af1fd2112d364b5577dffdf578752511bcc056112a85ddc49d860c4ca87fc17c0fac92b0a3e06e4835d5c76a652468108386770c61267
 EBUILD enlightenment-0.16.9999.ebuild 2003 SHA256 d3dbf359fd5dccf5acfc6dea699c0df051d172ae24061a5dceb681346e78845a SHA512 9bcd5e49a1a804611528b019b19d3e6adca816bd2d6607e5889ee69c7a7b1eddecfaeb905a4db8c4c95806f2ae78278024430322397ce7c841c5266ef280599d WHIRLPOOL 1f4faf945fc54a065493592712a892493c6350ccf5b3e420ace0d95bac873f300ea9f63193b214af22cbbd16889df815fe41a34bcd18e29124f501871db6190b
 EBUILD enlightenment-0.17.0.ebuild 2628 SHA256 1e8e7d19d10a790194676bf9dea8e05328eb28948d8486050a914ca1e480c002 SHA512 ea589c1c9d1d07cdcbd1e4e674246eccafce31b5302314f8fa49231ca4e86dbdf9501e22ce36065e0eef8e5c14be4eba02f9b6b3a48fca16b04f25768af23530 WHIRLPOOL 2e90428e64eaa86541fd56ed2a64ece504668d4afffce6cf898202a0029e35864822032a6964a5ddcd74957c92102ee0e2cd388bc73db6159557eaae842184c9
+EBUILD enlightenment-0.17.1.ebuild 2628 SHA256 2f96f8645262a6b75d13b279c801111f27303e9ca926d2f4e2b17101dace64c2 SHA512 be771016bfebc6c9ed6917d8461bdb137f65d7893b186f2f2003675edde2d8be673ae215674fefb997d862e4dcd96bf8e163642d88bcde99ac872e26bb3fbd83 WHIRLPOOL b9f40a1bddaf14ce804f90f649cf33a7bb7d9c23e5acb553a2f32ad14ca676d55a7f586f79eed91263f2dcd38eac9004dade10edcf5d128c202a871185dcacee
 EBUILD enlightenment-1.0.10.ebuild 2046 SHA256 d3e15849cd3de2cd3fcfe3cb4e7af4ea576364093883ff4e69b1798591d81cd4 SHA512 46cd8c89a54294d4becdb0bed0398837da5483332f216e45ee83e90b0b1c5da77d22fc2ca021c2dc9d49395428af1226fd46cdc0e6c87675d3afb3543d6fde9c WHIRLPOOL 55e44c81f1478149a75c38e00d5145ff8c39227219b376fdc0022de10b9083700532fa282a78621307e8a960007aa15a00dd6eee2c58dcac11f01eb7c3a0d3d9
 EBUILD enlightenment-1.0.11.ebuild 1989 SHA256 cd664da886e08cd1549de38a8736c3b8ac53802c44a7de84019255d46e1c0823 SHA512 f0969ffafbc528ca7b546e875f5018550a09a5fb64883465d904b228221c8fda49e941f8f534b250741366bf22ab11d1fbdea3a3f4d11d671c5a5e7affd55888 WHIRLPOOL 443e091c58eb804862b902ef4ff4cc85756d52b94573da872186e47e7cae4a17f280d33fa9f37e20a86e524ff54fd9494bf9db9104b146b76071dfff07664aab
 EBUILD enlightenment-1.0.2.ebuild 2042 SHA256 de36d0b8faf039656b1a12eca87a41881c8c3e9fe6136088cde6f54be9f6b9e1 SHA512 0b1644ad69d46ef138681fb6aba843daaa53b05ebe190c367eb02138d3104d7a60ae24a3718ae79c089f2d7bcb6a64ddaa4fa8bc152c5b43c8f353368c9fe640 WHIRLPOOL 81f6803d51898e22dbe41f8378f23061a9ceae30271ee5d3ed495fb41647bbcbd11e4dcb7eae5649118208b170116bfa102feea052804cc11be2d0141a7a6b91
@@ -20,22 +22,14 @@ EBUILD enlightenment-1.0.6.ebuild 2090 SHA256 a63507a1241d65353cb4bfd83ddb240a64
 EBUILD enlightenment-1.0.7.ebuild 2090 SHA256 5cfbf86f9aaa1a003619c6f1b92a16794c2ee660e24d82c00ed1ceecad915299 SHA512 eea2c7393d8c2ad6d82dc3efac682fe51b41d096c7c5e3ef9549537f9f1451cdbac678bd5eeac60e253b1894d98dfe56533d2c196ab45e03336ce055e313846a WHIRLPOOL 869d37f455b62c8d2d9113272ce70176ff8deed10ebe1a4d4c310aed808190499d483cc70eebd271113e450293e1c5e72bed86a80dc25498415b4d45ad033983
 EBUILD enlightenment-1.0.8.ebuild 2080 SHA256 4b868dc821bcedce6fbf659c1b970e8fb8787b19ed6afc29702eb3b5c038b6b7 SHA512 07e48fe099e1f9d41a318afb28e6aed9e33d6842f7129e9cfb7fd79c278f9b957c0d6f53364252fa549628adec5b0cf72b815f8e0fb4e02eb1ab0db31da04ee0 WHIRLPOOL b4776d891efb53abe366d2eaf31d51aa24607eb25efdc0f956bf097fcd63530186a7bbb7f006eee9f4f1b426f36478de6657c5351fff1a32ab5167446ec72828
 EBUILD enlightenment-1.0.9.ebuild 2090 SHA256 0326237b0c3630a139c778c726f4133cf97e20c652d6200c79a417d3db07c242 SHA512 d47b2da524cfb7d5903fa493ee4b2fc1a65bc4d4babeb3add467dba836b7ef3f5c6f30eb9d9d1fbcb6d95490374d35f274d6971017bdc8035ebda8fcbd12053b WHIRLPOOL 9eeec036ea494b69cbedaa49936ce19450e413cc017e92ac45185caf592df0ab8a5a166b35795fb4e2a85b0d32ab7f328fe7332728e1fbbc644807115d7dc89d
-MISC ChangeLog 25269 SHA256 b8b0dbfa96c2a1b5a0805a29c7e4875a87d28169ace0c6c15bd3bfbc052cd1af SHA512 4215796bed23a85e07fd26a2309aa078cb0ecce9c798886f563f93b17999eef6498605aaaba1006b787cd4d36d2c70b2dbb9589c4c8e5751a7629a02a641c1b0 WHIRLPOOL 1c9e7061c1eb37095e4d140518bfb843a3159798104d5e898d3f55eb4711f208dc4dc878c741ac78981d0e534f7a3f0dd26c1258cbcbdab7c807a00c39ed0f59
+MISC ChangeLog 25412 SHA256 b7ffb6468de6e6806ecca0b8ac79780e419c9725d41e2652e52d3e1220116a5f SHA512 982ecfc8329264fdc823f954dc9341bffc6ce3097c587321535169b26820e7a130ba3e78a6ae8cae7f7a87319467996863bf0ef726b9d4a43b34d2733abb21b2 WHIRLPOOL db1fd08fdde126252beec71607a89d47218d150e5784d494cba565c95735d5e077a085b3e10909e909b8a4d05ec8f856e9ce9f4214fd38b2268162f4b716c5d5
 MISC metadata.xml 6521 SHA256 aa9f1588cecf3414d30054e9f193e0df6da0f37ef3675d91fd1d1727783d403d SHA512 7a3bc12d81a3a7901bafccf43d122633e0d75b842455192e19b14a3c67942796c612fc435735e6f2bcf7f74b1a25cbd9b1227161226cc420b94f104f2c021093 WHIRLPOOL 5d483c90ff5edf50e840cdced3876167af00a000c73d2e8157c35c094df9f926379b171a2bfbb2e118b6b682a0aefbf458316041ff677e3c07efe06cfc4d2d13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRBFHdAAoJELEHsLL7fEFWbrcQAMMNFnVquvoz+lSDEMopQY9U
-coj6qeIn0TIwXxhCJ2jl0+W50tR/Gl81fOFg3rO5kiYEFgJTUSMOwDtWcYQ1BObX
-4IH1Hx9mVEOrSH8Qyhc67hMgF+zTZ6+fdIYfirCty4h4YegQoNAYFwfBzAZVt0fm
-UXgMgBMYhueXPxFYzxydMzD6j71kZPQcdO16Z6qqYTf72Rj/fI6GwIpF8lWC9m4k
-KbsJAeQaWNxwe38IiQnUHh9Ft/HvklMxaUo5uKCMM2SPoz4ZlefncT1u+3JqIQ+T
-g7EB7f6Oa6Fbj4c7y+a2k6ahqZgvODK5zJuAY8/sc6pi1jb8iXqTvjV8iu1zLlu9
-Z4Pdr66nk54wX86ayKXLgKOIZn8AnKLL4MF4u0NNguKrzrS84HVKOlc7l9mI9zKn
-kQPR3Pka4sG28G4n7nbYq6z4IokqCib9cncDayJSOJxQ/kRecky0jraNTsAzVXoV
-wlf0gu7u9TEeLMldjxo8UFBp4xJrMTBFlqW0kxyXBsnkVEGhfi27lZVLGx8CgQ1I
-U8+3Qh2Laq/tym6UmzBYtIEUFui15hB56o+mek/Ibp+Uiti+ItfPit/H6B48M2ew
-qVgV1vVAcYumWHGzZCY/0leSOkvKBv/IK0wgncAVuTM2WHGgYLXGhvj5oMhGZzTn
-sWrorpxJm3WWkO3bYOF4
-=U07n
+iJwEAQEIAAYFAlEKw7AACgkQG7kqcTWJkGeK1gP/VruZfIadIJia8pI+l3LuStTX
+KhnqSPxMfDEMN8TG35U7W1jralcSK7Q39v/9KndffeCMGfB6MGkPLTllePc3D0W9
+OlDgbw1ryZt477nE1jjth8N9Vxt79QAQZzp/bHlSwhvLHzOwJR+CO3HAOnk4l/PI
+GmXJVmi8nHihhK3ufls=
+=hko4
 -----END PGP SIGNATURE-----
