@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/enlightenment
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.180 2013/01/26 21:59:52 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.181 2013/01/31 19:19:06 tommy Exp $
+
+*enlightenment-0.17.1 (31 Jan 2013)
+
+  31 Jan 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  +enlightenment-0.17.1.ebuild:
+  Version bump
 
   26 Jan 2013; Mike Frysinger <vapier@gentoo.org> enlightenment-1.0.11.ebuild:
   Mark stable for everyone else #453014.
